Updated:  * gulp-tsd  * gulp-sourcemaps  * gulp-load-plugins

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "gulp-if": "^1.2.5",
     "gulp-install": "^0.4.0",
     "gulp-istanbul": "^0.10.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-mocha": "^6.0.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-tsd": "0.0.4",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-tsd": "^0.1.1",
     "gulp-typescript": "^2.7.8",
     "gulp-util": "^3.0.6",
     "merge2": "^0.3.6",
